[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = ""
authors = [
    {name = "shakti2002", email = "shakti25io054@satiengg.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_paper_fetcher"}]  

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
